feat: added `/detail` endpoint
`/detail` endpoint will scrape the detail of your profile, like name, nim and etc
